--- a/css/style.css
+++ b/css/style.css
@@ -2,121 +2,95 @@ body{
     margin: 0px;
     padding: 0px;
 }
-
-.container-main {
+container-main {
     display: grid;
     width: 100%;
-    min-height: 100vh ;
+    min-height: 100vh;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    padding: -17px;
+    /* margin: 30px; */
+    background-color: #efe5e5;
 }
 
 .container {
-    width: 390px;
-    background: #fff;
+    width: 100%;
     border-radius: 10px;
-    overflow: hidden;
     text-align: center;
-    box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
-    margin-top: auto;
+    margin: 0px;
+    overflow: hidden;
+    padding-right: 195px;
 }
 
-.hero-image{
-    position:sticky; 
-    height: inherit;
-    padding: 0 0 5px;
+.img-moon {
+    float: right;
+    margin: 11px;
 }
 
-.d-order{
-    font-size: 31px;
-    color: rgb(12, 7, 1);
-    font-weight: bold;
+
+.head-todo {
+    color: #dfe5e6;
+    text-align: -webkit-left;
+    letter-spacing: 16px;
+    font-family: system-ui;
+
 }
 
-p {
-    margin-left: 75px;
-    margin-right: 72px;
-	font-size: 14px;
-	font-weight: 100;
-	line-height: 20px;
-	letter-spacing: 0.5px;   
-    color: #847979;  
+.new-todo {
+    color: rgb(243, 241, 240);
 }
 
-span {
-	font-size: 12px;
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
-.annual-style{
-    width: 110px;
-    margin: 10px ;
-    float: left;  
-    font-weight: bold; 
-    font-size: 18px; 
+.list {
+    display: block;
+    height: 170%;
+    width: 100%;
+    background-color: white;
+    text-align: center;
+    border: none;
+    border-radius: 4px;
+    padding: 0px;
+    text-shadow: 4 -1 black;
+    box-shadow: paleturquoise;
+    box-shadow: 0 14px 28px rgb(0 0 0 / 8%), 0 10px 10px rgb(0 0 0 / 8%);
+    /* size: 50px; */
 }
 
-.money {
-    margin-right: 38px;  
-    color:rgb(135, 134, 219);
-   
+.list {
+    display: block;
+    height: 170%;
+    width: 100%;
+    background-color: white;
+    text-align: center;
+    border: none;
+    border-radius: 4px;
+    padding: 0px;
+    text-shadow: 4 -1 black;
+    box-shadow: paleturquoise;
+    box-shadow: 0 14px 28px rgb(0 0 0 / 8%), 0 10px 10px rgb(0 0 0 / 8%);
+    /* size: 50px; */
 }
 
-.text {
-    display: flex;
-    width: 90%;
-    height: 70px;
-    margin: 20px;
-    justify-content: center; 
-    align-items:center; 
-    background-color: rgb(210, 220, 233);
-    border-radius: 10px;
+.puteem-element {
+    display: -webkit-inline-box;
+    position: relative;
+    bottom: -107px;
 }
 
-.button-Proceed {
-    width: 90%;
-    height: 50px;
-    font-family: Poppins-Medium;
-    background-color: rgb(30, 45, 179);
-    font-size: 15px;
-    color: rgb(253, 253, 253);
-    line-height: 1.2;
-    text-transform: uppercase;
-    border-radius: 10px;
-    box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
-}
-
-.button-Proceed:hover{
-    background-color: rgb(97, 121, 231);
-}
-
-.change{
-    margin-left: 68px;  
-    padding: 20px;
-    text-align: right!important;
-    text-decoration:underline;
-    float:right;
-    font-weight: bold;
-    color: rgb(40, 25, 180);
-    float:right;
-    font-weight: bold;
-    color: rgb(40, 25, 180);
-}
-
-.change:hover {
-    text-decoration:none;
-}
-
-.Cancel{
-    height: 10px;
-    padding: 26px;
-    color: rgb(135, 134, 219);
-    border: hidden;
-    background: scroll;
-}
-
-.Cancel:hover{
-    color: rgb(22, 22, 80);
+.drag {
+    text-align: center;
+    color: #c4c1c1;
 }
 
 .attribution {
@@ -131,7 +105,7 @@ span {
 @media only screen and (max-width: 375px) { 
 /* for mobile */
 .container-main {
-    background-image: url(../images/pattern-background-mobile.svg);
+    background-image: url(../images/bg-mobile-light.jpg);
     background-repeat: no-repeat;
     background-color: #f2f2f2;
     font-size: 16px;
@@ -141,9 +115,8 @@ span {
 @media only screen and (max-width: 1440px) {
 /* for disktop */
 .container-main {
-    background-image: url(../images/pattern-background-desktop.svg);
+    background-image: url(./images/bg-desktop-light.jpg);
     background-repeat: no-repeat;
-    background-color: #f2f2f2;
     font-size: 16px;
 }
 }
