--- a/css/style.css
+++ b/css/style.css
@@ -2,45 +2,37 @@ body{
     margin: 0px;
     padding: 0px;
 }
-container-main {
+
+.container-main {
     display: grid;
     width: 100%;
-    min-height: 100vh;
+    min-height: 100vh ;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: -17px;
-    /* margin: 30px; */
     background-color: #efe5e5;
 }
 
 .container {
-    width: 100%;
+    width: 390px;
     border-radius: 10px;
     text-align: center;
-    margin: 0px;
-    overflow: hidden;
-    padding-right: 195px;
 }
 
-.img-moon {
+.img-moon{
     float: right;
     margin: 11px;
 }
 
-
-.head-todo {
+.head-todo{
     color: #dfe5e6;
     text-align: -webkit-left;
     letter-spacing: 16px;
     font-family: system-ui;
-
 }
-
-.new-todo {
-    color: rgb(243, 241, 240);
+.new-todo{
+color: rgb(243, 241, 240);
 }
-
 
 input[type=text], select {
     width: 100%;
@@ -50,33 +42,45 @@ input[type=text], select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-}
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 
-.list {
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+.list{
     display: block;
-    height: 170%;
+    height: 100%;
     width: 100%;
     background-color: white;
     text-align: center;
     border: none;
     border-radius: 4px;
-    padding: 0px;
     text-shadow: 4 -1 black;
     box-shadow: paleturquoise;
     box-shadow: 0 14px 28px rgb(0 0 0 / 8%), 0 10px 10px rgb(0 0 0 / 8%);
-}
-
-.puteem-element {
+  }
+  
+.puteem-element{
     display: -webkit-inline-box;
     position: relative;
-    bottom: -107px;
-}
-
-.drag {
+    bottom: -107px;}
+.drag{
     text-align: center;
     color: #c4c1c1;
 }
-
 .attribution {
     font-size: 11px;
     text-align: center;
@@ -89,9 +93,8 @@ input[type=text], select {
 @media only screen and (max-width: 375px) { 
 /* for mobile */
 .container-main {
-    background-image: url(../images/bg-mobile-light.jpg);
+    background-image: url(./images/bg-mobile-light.jpg);
     background-repeat: no-repeat;
-    background-color: #f2f2f2;
     font-size: 16px;
 }
 }
