--- a/reading-list.scss
+++ b/reading-list.scss
@@ -1,22 +1,26 @@
 
 
 
-a{
+/*a{
     img-border:0 ;
     src:url(../images/icon-moon.svg);
     float: right;
     margin: 11px;
     
 }
-/*input[type=text], select {
+*/
+
+input[type=text], select {
     width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 8x 0;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-    
+    width: 390px;
+    border-radius: 10px;
+    text-align: center;
   }
   
   input[type=submit] {
@@ -28,27 +32,10 @@ a{
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    .items{
-        color: rgb(212, 215, 221);
 
-    }
-    .all{
-        color: rgb(27, 93, 235);
-    }
-    .Active{
-        color:rgb(212, 215, 221);
-    }
-    .completed{
-        color:rgb(212, 215, 221);
-
-    }
-    .clear{
-        color:rgb(212, 215, 221);
-
-    }
   }
   
   input[type=submit]:hover {
     background-color: #45a049;
   }
-  */
+  
