--- a/css/light-mode.css
+++ b/css/light-mode.css
@@ -16,10 +16,10 @@ body{
 
 .container {
     width: 390px;
+    max-width: 390px;
     border-radius: 10px;
     text-align: center;
     padding: 124px;
-    
 }
 
 
@@ -41,22 +41,31 @@ body{
     letter-spacing: 16px;
     font-family: system-ui;
 }
-.new-todo{
+/* .new-todo{
     color: rgb(33 33 132);
-    width: 100%;
+  
     padding: 13px 0px;
     margin: 8x 0;
     border: 1px solid;
     border-radius: 4px;
     box-sizing: border-box;
     background-color: white;
-}
+
+    position: absolute;
+    left: 50px;
+    height: 35px;
+    width: 310px;
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    padding-left: 10px;
+} 
 #input{
     width: 89%;
     height: 100%;
     border: none;
-}
-#list{
+} 
+/* #list{
     width: 100%;
     padding: 107px 0px;
     margin: 8x 0;
@@ -66,43 +75,58 @@ body{
     box-sizing: border-box;
     border-color: lightslategrey;
     background-color: white;
-}
-.puteem-element{
+} */
+ .putton-element{
     display: flex;
     justify-content: space-around;
     width: 100%;
     padding: 11px 0px;
     margin: 8x 0;
-    border: 1px solid;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
     border-radius: 4px;
     border-color: lightslategrey;
     font-size: 12px;
     position: relative;
-    bottom: -108px;
-}
+    bottom: -311px;
+} 
 .items{
-color: rgb(215, 219, 221);
-float: left;
-}
+color: rgb(175, 175, 194);
+font-weight: bold;
+} 
 
 .all{
-color: rgb(47, 47, 180);
+color: rgb(8, 8, 209);
+font-weight: bold;
 }
 
 .Active{
     color: rgb(175, 175, 194);
+    font-weight: bold;
 }
+.Active:hover{
+    color: rgb(26, 24, 24);
+    font-weight: bold;
+}
+
 .completed{
     color: rgb(175, 175, 194);
+    font-weight: bold;
 }
 .clear{
     color: rgb(175, 175, 194);
+    font-weight: bold;
 }
-
+.clear:hover{
+    color: rgb(90, 86, 86);
+    font-weight: bold;
+}
 
 .drag{
     text-align: center;
-    color: #c4c1c1;
+    color: #a09797;
+    margin: 39px;
+    font-size: 12px;
+    padding: 12px;
 }
 .attribution {
     font-size: 11px;
@@ -112,6 +136,198 @@ color: rgb(47, 47, 180);
 .attribution a {
     color: hsl(228, 45%, 44%); 
 }
+
+/* 
+.content{
+    width:380px;
+    height: 350px;
+    max-height:350px;
+    background-color: #FFF;
+    overflow: auto;
+}
+.content::-webkit-scrollbar { 
+    display: none; 
+}
+.content ul{
+    padding:0;
+    margin:0;
+}
+
+.item{
+    width:380px;
+    height: 45px;
+    min-height: 45px;
+    position: relative;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.item i.co{
+    position: absolute;
+    font-size: 25px;
+    padding-left:5px;
+    left:15px;
+    top:10px;
+}
+.item i.co:hover{
+    cursor: pointer;
+}
+
+/* ------------ add item ------------ */
+/* .new-todo{
+    position: relative;
+    width: 360px;
+    height:40px;
+    background-color: #FFF;
+    padding: 10px;
+    border-top: 1px solid rgba(0,0,0,0.1);
+}
+.new-todo i{
+    position: absolute;
+    font-size: 40px;
+     color: #4162f6;
+}
+
+.new-todo input{
+    position: absolute;
+    left: 50px;
+    height: 35px;
+    width: 310px;
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    padding-left:10px;
+}  
+.new-todo input::-webkit-input-placeholder { 
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+.new-todo input::-moz-placeholder { 
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+.new-todo input:-ms-input-placeholder { 
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+.new-todo input:-moz-placeholder { 
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+} 
+
+ */
+
+
+
+/* /\.............. */
+.content{
+    width: 382px;
+    height: 350px;
+    max-height: 350px;
+    background-color: #FFF;
+    overflow: auto;
+    border-radius: 3px;
+}
+
+.content ul{
+    padding:0;
+    margin:0;
+}
+.item{
+    width:380px;
+    height: 45px;
+    min-height: 45px;
+    position: relative;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.item i.co{
+    position: absolute;
+    font-size: 25px;
+    padding-left:5px;
+    left:15px;
+    top:10px;
+}
+.item i.co:hover{
+    cursor: pointer;
+}
+.fa-check-circle{
+    color: #85538a;
+}
+.item p.text{
+    position: absolute;
+    padding:0;
+    margin:0;
+    font-size: 20px;
+    left:50px;
+    top:5px;
+    background-color: #FFF;
+    max-width:285px;
+}
+.lineThrough{
+    text-decoration: line-through;
+    color : #ccc;
+}
+.item i.de{
+    position: absolute;
+    font-size: 25px;
+    right:15px;
+    top:10px;
+}
+.item i.de:hover{
+    color:#af0000;
+    cursor: pointer;
+}
+/* ------------ add item ------------ */
+.add-to-do{
+    width: 363px;
+    border-radius: 3px;
+    text-align: center;
+    padding: 9px;
+    background-color: white;
+    margin-bottom: 19px;
+}
+.add-to-do i{
+    /* position: absolute; */
+    font-size: 26px;
+    color: #85538a;
+}
+
+.add-to-do input {
+    width: 310px;
+    border: none;
+ 
+}
+.add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+.add-to-do input::-moz-placeholder { /* Firefox 19+ */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+.add-to-do input:-ms-input-placeholder { /* IE 10+ */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+.add-to-do input:-moz-placeholder { /* Firefox 18- */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+
+
+
 
 @media only screen and (max-width: 375px) { 
 /* for mobile */
