--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -1,3 +1,4 @@
+
 body{
     margin: 0px;
     padding: 0px;
@@ -10,15 +11,14 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background-color: #1d1414;
+    background-color: #2d2c33;
 }
-
 .container {
     width: 390px;
+    max-width: 390px;
     border-radius: 10px;
     text-align: center;
-    padding: 66px;
-    
+    padding: 124px;
 }
 
 
@@ -35,34 +35,61 @@ body{
 }
 
 .head-todo{
-    color: #f1f2f2;
+    color: #cedbdb;
     text-align: -webkit-left;
     letter-spacing: 16px;
     font-family: system-ui;
 }
-.new-todo{
-color: rgb(243, 241, 240);
-}
-
-
-
-.puteem-element{
-    display: -webkit-inline-box;
+ .putton-element{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 11px 0px;
+    margin: 8x 0;
+    border-top: 1px solid rgba(0,0,0,0.1);
+    border-color: lightslategrey;
+    font-size: 12px;
     position: relative;
-    bottom: -107px;
-}
-
-.items{
-color: rgb(215, 219, 221);
-float: left;
-}
+    bottom: -311px;
+} 
+.num-items{
+color: rgb(175, 175, 194);
+font-weight: bold;
+} 
 
 .all{
-color: rgb(47, 47, 180);
+color: rgb(8, 8, 209);
+font-weight: bold;
 }
+
+.Active{
+    color: rgb(175, 175, 194);
+    font-weight: bold;
+}
+.Active:hover{
+    color: rgb(26, 24, 24);
+    font-weight: bold;
+}
+
+.completed{
+    color: rgb(175, 175, 194);
+    font-weight: bold;
+}
+.clear{
+    color: rgb(175, 175, 194);
+    font-weight: bold;
+}
+.clear:hover{
+    color: rgb(90, 86, 86);
+    font-weight: bold;
+}
+
 .drag{
     text-align: center;
-    color: #c4c1c1;
+    color: #a09797;
+    margin: 39px;
+    font-size: 12px;
+    padding: 12px;
 }
 .attribution {
     font-size: 11px;
@@ -72,19 +99,133 @@ color: rgb(47, 47, 180);
 .attribution a {
     color: hsl(228, 45%, 44%); 
 }
-@media only screen and (max-width: 375px) { 
-    /* for mobile */
-    .container-main {
-        background-image: url(../images/bg-mobile-dark.jpg);
-        background-repeat: no-repeat;
-        font-size: 16px;
-    }
+
+
+/* /\.............. */
+.content{
+    width: 382px;
+    height: 350px;
+    max-height: 350px;
+    background-color: #363142;
+    overflow: auto;
+    border-radius: 3px;
 }
+
+.content ul{
+    padding:0;
+    margin:0;
+}
+.item{
+    width:380px;
+    height: 45px;
+    min-height: 45px;
+    position: relative;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.item i.co{
+    position: absolute;
+    font-size: 25px;
+    padding-left:5px;
+    left:10px;
+    top:10px;
+}
+.item i.co:hover{
+    cursor: pointer;
+}
+.fa-check-circle{
+    color: #b563c0;
+}
+.item p.text{
+    color: rgb(255, 255, 255);
+    position: absolute;
+    padding: 9px;
+    margin: 0;
+    font-size: 15px;
+    left: 50px;
+    top: 5px;
+    background-color: #363142;
+    max-width: 285px;
+}
+.lineThrough{
+    text-decoration: line-through;
+    color : #363142;;
+}
+.item i.de{
+    position: absolute;
+    font-size: 21px;
+    right:15px;
+    top:10px;
+}
+.item i.de:hover{
+    color:#af0000;
+    cursor: pointer;
+}
+/* ------------ add item ------------ */
+.add-to-do{
+    width: 363px;
+    border-radius: 3px;
+    text-align: center;
+    padding: 9px;
+    background-color: #363142;
+    margin-bottom: 19px;
+}
+.add-to-do i{
+    position: absolute;
+    font-size: 26px;
+    color: #85538a;
+    right: 385px;
+}
+
+.add-to-do input {
+    position:relative;
+    width: 310px;
+    border: none;
+    padding: 5px;
+    left: 5px;
+    background-color:  #363142;;
+}
+.add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #878da7;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 15px;
+    padding: 5px;
+}
+.add-to-do input::-moz-placeholder { /* Firefox 19+ */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+.add-to-do input:-ms-input-placeholder { /* IE 10+ */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+.add-to-do input:-moz-placeholder { /* Firefox 18- */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+
+
+
+
+@media only screen and (max-width: 375px) { 
+/* for mobile */
+.container-main {
+    background-image: url(../images/bg-mobile-dark.jpg);
+    background-repeat: no-repeat;
+    font-size: 16px;
+}
+}
+
 @media only screen and (max-width: 1440px) {
-    /* for disktop */
-    .container-main {
-        background-image: url(../images/bg-desktop-dark.jpg);
-        background-repeat: no-repeat;
-        font-size: 16px;
-    }
+/* for disktop */
+.container-main {
+    background-image: url(../images/bg-desktop-dark.jpg);
+    background-repeat: no-repeat;
+    font-size: 16px;
+}
 }
