--- a/css/light-mode.css
+++ b/css/light-mode.css
@@ -13,7 +13,6 @@ body{
     align-items: center;
     background-color: #efe5e5;
 }
-
 .container {
     width: 390px;
     max-width: 390px;
@@ -41,55 +40,19 @@ body{
     letter-spacing: 16px;
     font-family: system-ui;
 }
-/* .new-todo{
-    color: rgb(33 33 132);
-  
-    padding: 13px 0px;
-    margin: 8x 0;
-    border: 1px solid;
-    border-radius: 4px;
-    box-sizing: border-box;
-    background-color: white;
-
-    position: absolute;
-    left: 50px;
-    height: 35px;
-    width: 310px;
-    background-color: transparent;
-    border: none;
-    font-size: 20px;
-    padding-left: 10px;
-} 
-#input{
-    width: 89%;
-    height: 100%;
-    border: none;
-} 
-/* #list{
-    width: 100%;
-    padding: 107px 0px;
-    margin: 8x 0;
-    display: inline-block;
-    border: 1px solid;
-    border-radius: 4px;
-    box-sizing: border-box;
-    border-color: lightslategrey;
-    background-color: white;
-} */
  .putton-element{
     display: flex;
     justify-content: space-around;
     width: 100%;
     padding: 11px 0px;
     margin: 8x 0;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-    border-radius: 4px;
+    border-top: 1px solid rgba(0,0,0,0.1);
     border-color: lightslategrey;
     font-size: 12px;
     position: relative;
     bottom: -311px;
 } 
-.items{
+.num-items{
 color: rgb(175, 175, 194);
 font-weight: bold;
 } 
@@ -137,92 +100,6 @@ font-weight: bold;
     color: hsl(228, 45%, 44%); 
 }
 
-/* 
-.content{
-    width:380px;
-    height: 350px;
-    max-height:350px;
-    background-color: #FFF;
-    overflow: auto;
-}
-.content::-webkit-scrollbar { 
-    display: none; 
-}
-.content ul{
-    padding:0;
-    margin:0;
-}
-
-.item{
-    width:380px;
-    height: 45px;
-    min-height: 45px;
-    position: relative;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-.item i.co{
-    position: absolute;
-    font-size: 25px;
-    padding-left:5px;
-    left:15px;
-    top:10px;
-}
-.item i.co:hover{
-    cursor: pointer;
-}
-
-/* ------------ add item ------------ */
-/* .new-todo{
-    position: relative;
-    width: 360px;
-    height:40px;
-    background-color: #FFF;
-    padding: 10px;
-    border-top: 1px solid rgba(0,0,0,0.1);
-}
-.new-todo i{
-    position: absolute;
-    font-size: 40px;
-     color: #4162f6;
-}
-
-.new-todo input{
-    position: absolute;
-    left: 50px;
-    height: 35px;
-    width: 310px;
-    background-color: transparent;
-    border: none;
-    font-size: 20px;
-    padding-left:10px;
-}  
-.new-todo input::-webkit-input-placeholder { 
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-}
-.new-todo input::-moz-placeholder { 
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-}
-.new-todo input:-ms-input-placeholder { 
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-}
-.new-todo input:-moz-placeholder { 
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-} 
-
- */
-
-
 
 /* /\.............. */
 .content{
@@ -252,7 +129,7 @@ font-weight: bold;
     position: absolute;
     font-size: 25px;
     padding-left:5px;
-    left:15px;
+    left:10px;
     top:10px;
 }
 .item i.co:hover{
@@ -263,13 +140,13 @@ font-weight: bold;
 }
 .item p.text{
     position: absolute;
-    padding:0;
-    margin:0;
-    font-size: 20px;
-    left:50px;
-    top:5px;
+    padding: 9px;
+    margin: 0;
+    font-size: 15px;
+    left: 50px;
+    top: 5px;
     background-color: #FFF;
-    max-width:285px;
+    max-width: 285px;
 }
 .lineThrough{
     text-decoration: line-through;
@@ -277,7 +154,7 @@ font-weight: bold;
 }
 .item i.de{
     position: absolute;
-    font-size: 25px;
+    font-size: 21px;
     right:15px;
     top:10px;
 }
@@ -295,20 +172,24 @@ font-weight: bold;
     margin-bottom: 19px;
 }
 .add-to-do i{
-    /* position: absolute; */
+    position: absolute;
     font-size: 26px;
     color: #85538a;
+    right: 385px;
 }
 
 .add-to-do input {
+    position:relative;
     width: 310px;
     border: none;
- 
+    padding: 5px;
+    left: 5px;
 }
 .add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    color: #4162f6;
+    color: #6a708a;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
+    font-size: 15px;
+    padding: 5px;
 }
 .add-to-do input::-moz-placeholder { /* Firefox 19+ */
     color: #4162f6;
