--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -13,17 +13,34 @@ body{
     align-items: center;
     background-color: #161722;
 }
+.image {
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    height: 34%;
+    background-image: url(../images/bg-mobile-light.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
 
 .container {
-    width: 390px;
-    max-width: 390px;
+    position: relative;
+    display: table;
+    width: 223px;
+    height: 553px;
+    max-width: 329px;
     text-align: center;
 }
 
+.head{
+    position: relative;
+    width: 327px;
+}
 #dark-mode-toggle{
     width: 28px;
     height: 36px;
-    margin: 11px;
+    margin: 7px;
     float: right;
     background-image: url(../images/icon-sun.svg);
     background-size: 27px;
@@ -39,89 +56,62 @@ body{
     font-family: system-ui;
 }
 
- .putton-element{
+.add-to-do{
     position: relative;
-    display: flex;
-    width: 100%;
-    padding: 11px 0px;
-    justify-content: space-around;
-    border-top: 1px solid rgba(0,0,0,0.1);
-    border-color: lightslategrey;
-    font-size: 12px;
-    
-} 
-
-.num-items{
-color: rgb(175, 175, 194);
-font-weight: bold;
-
-} 
-
-.all{
-color: rgb(8, 8, 209);
-font-weight: bold;
-}
-
-.Active{
-    color: rgb(175, 175, 194);
-    font-weight: bold;
-}
-
-.Active:hover{
-    color: rgb(26, 24, 24);
-    font-weight: bold;
-}
-
-.completed{
-    color: rgb(175, 175, 194);
-    font-weight: bold;
-}
-
-.clear{
-    color: rgb(175, 175, 194);
-    font-weight: bold;
-}
-
-.clear:hover{
-    color: rgb(90, 86, 86);
-    font-weight: bold;
-}
-
-.drag{
-    margin: 39px;
-    padding: 12px;
-    text-align: center;
-    color: #a09797;
-    font-size: 12px;
-    
-}
-
-.attribution {
-    font-size: 11px;
-    text-align: center;
-}
-
-.attribution a {
-    color: hsl(228, 45%, 44%); 
-}
-
-.content{
-    width: 382px;
-    max-height: 350px;
-    background-color: 	#25273c;
-    overflow: auto;
+    width: 301px;
+    margin-bottom: 19px;
+    padding: 9px;
     border-radius: 3px;
+    text-align: center;
+    background-color: #25273c;
+   
 }
 
-.content ul{
-    margin:0;
-    padding:0;
+.add-to-do i {
+    position: relative;
+    font-size: 26px;
+    color: #85538a;
     
+}
+
+.add-to-do input {
+    position: relative;
+    width: 264px;
+    padding: 5px;
+    border: none;
+    background-color:  	#25273c;
+    color: #cacde8;
+}
+
+.add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    padding: 5px;
+    color: #cacde8;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 15px;
+    
+}
+
+.add-to-do input::-moz-placeholder { /* Firefox 19+ */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+
+.add-to-do input:-ms-input-placeholder { /* IE 10+ */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+
+.add-to-do input:-moz-placeholder { /* Firefox 18- */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
 }
 
 .item{
     position: relative;
-    width:380px;
+    width:329px;
     height: 45px;
     margin: 0;
     padding: 0;
@@ -181,74 +171,106 @@ font-weight: bold;
     cursor: pointer;
 }
 
-.add-to-do{
-    width: 363px;
-    margin-bottom: 19px;
-    padding: 9px;
+.content{
+    width: 321px;
+    max-height: 375px;
+    background-color: 	#25273c;
+    overflow: auto;
     border-radius: 3px;
-    text-align: center;
-    background-color: #25273c;
-   
 }
 
-.add-to-do i {
+.content ul{
+    margin:0;
+    padding:0;
+    
+}
+ .putton-element{
     position: relative;
-    font-size: 26px;
-    color: #85538a;
+    display: flex;
+    padding: 11px 0px;
+    justify-content: space-around;
+    border-top: 1px solid rgba(0,0,0,0.1);
+    border-color: lightslategrey;
+    font-size: 14px;
     
+} 
+
+.num-items{
+color: rgb(175, 175, 194);
+font-weight: bold;
+
+} 
+
+.all{
+color: rgb(8, 8, 209);
+font-weight: bold;
 }
 
-
-.add-to-do input {
-    position:relative;
-    width: 310px;
-    border: none;
-    padding: 5px;
-    left: 5px;
-    background-color:  	#25273c;
-    color: #cacde8;
+.Active{
+    color: rgb(175, 175, 194);
+    font-weight: bold;
 }
 
-.add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    padding: 5px;
-    color: #cacde8;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 15px;
-    
+.Active:hover{
+    color: rgb(26, 24, 24);
+    font-weight: bold;
 }
 
-.add-to-do input::-moz-placeholder { /* Firefox 19+ */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
+.completed{
+    color: rgb(175, 175, 194);
+    font-weight: bold;
 }
 
-.add-to-do input:-ms-input-placeholder { /* IE 10+ */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
+.clear{
+    color: rgb(175, 175, 194);
+    font-weight: bold;
 }
 
-.add-to-do input:-moz-placeholder { /* Firefox 18- */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
+.clear:hover{
+    color: rgb(90, 86, 86);
+    font-weight: bold;
 }
 
-@media only screen and (min-width: 375px) { 
-/* for mobile */
-.container-main {
-    background-image: url(../images/bg-mobile-dark.jpg);
-    background-repeat: no-repeat;
-    font-size: 16px;
+.drag{
+    margin: 39px;
+    padding: 12px;
+    text-align: center;
+    color: #a09797;
+    font-size: 12px;
 }
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
 }
+
+.attribution a {
+    color: hsl(228, 45%, 44%); 
+}
+
 
 @media only screen and (max-width: 1440px) {
 /* for disktop */
-.container-main {
-    background-image: url(../images/bg-desktop-dark.jpg);
-    background-repeat: no-repeat;
-    font-size: 16px;
+
+.container {
+    width: 300px;
+}
+
+.head{
+    width: 380px;
+}
+.add-to-do{
+    width: 340px;
+}
+
+.add-to-do input {
+    width: 300px;
+}
+
+.item{
+    width: 380px;
+}
+.content{
+    width: 360px;
 }
 }
