--- a/css/light-mode.css
+++ b/css/light-mode.css
@@ -1,4 +1,3 @@
-
 body{
     margin: 0px;
     padding: 0px;
@@ -12,18 +11,38 @@ body{
     justify-content: center;
     align-items: center;
     background-color: #e4e5f1;
+    font-size: 16px;
+}
+
+.image {
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    height: 34%;
+    background-image: url(../images/bg-mobile-light.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
 .container {
-    width: 390px;
-    max-width: 390px;
+    position: relative;
+    display: table;
+    width: 223px;
+    height: 553px;
+    max-width: 329px;
     text-align: center;
+}
+
+.head{
+    position: relative;
+    width: 327px;
 }
 
 #dark-mode-toggle{
     width: 28px;
     height: 36px;
-    margin: 11px;
+    margin: 7px;
     float: right;
     background-image: url(../images/icon-moon.svg);
     background-size: 27px;
@@ -39,16 +58,132 @@ body{
     font-family: system-ui;
 }
 
+.add-to-do{
+    position: relative;
+    width: 301px;
+    margin-bottom: 19px;
+    padding: 9px;
+    border-radius: 3px;
+    text-align: center;
+    background-color: white;
+}
+
+.add-to-do i{
+    position: relative;
+    font-size: 26px;
+    color: #85538a;;
+}
+
+.add-to-do input {
+    position: relative;
+    width: 264px;
+    padding: 5px;
+    border: none;
+}
+
+.add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    padding: 5px;
+    color: #6a708a;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 15px;
+}
+
+.add-to-do input::-moz-placeholder { /* Firefox 19+ */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+
+.add-to-do input:-ms-input-placeholder { /* IE 10+ */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+
+.add-to-do input:-moz-placeholder { /* Firefox 18- */
+    color: #4162f6;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+
+.item{
+    position: relative;
+    width: 329px;
+    height: 45px;
+    margin: 0;
+    padding: 0;
+    min-height: 45px;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    list-style: none;
+}
+
+.item i.co{
+    position: absolute;
+    padding-left:5px;
+    font-size: 25px;
+    left:10px;
+    top:10px;
+}
+
+.item i.co:hover{
+    cursor: pointer;
+}
+
+.fa-check-circle{
+    color: #85538a;
+}
+
+.item p.text{
+    position: absolute;
+    max-width: 285px;
+    margin: 0;
+    padding: 9px;
+    font-size: 15px;
+    left: 50px;
+    top: 5px;
+    background-color: #fafafa;
+    color: #393a4c;
+}
+
+.lineThrough{
+    text-decoration: line-through;
+    color : #ccc;
+}
+
+.item i.de{
+    position: absolute;
+    font-size: 21px;
+    right:15px;
+    top:10px;
+}
+
+.item i.de:hover{
+    color:#af0000;
+    cursor: pointer;
+}
+
+.content{
+    width: 321px;
+    max-height: 375px;
+    background-color: #fafafa;
+    overflow: auto;
+    border-radius: 3px;
+}
+
+.content ul{
+    margin:0;
+    padding:0;
+}
+
 .putton-element{
     position: relative;
     display: flex;
-    justify-content: space-around;
-    width: 100%;
     padding: 11px 0px;
+    justify-content: space-around;
     border-top: 1px solid rgba(0,0,0,0.1);
     border-color: lightslategrey;
     font-size: 12px;
-} 
+}
 
 .num-items{
 color: rgb(175, 175, 194);
@@ -59,6 +194,7 @@ font-weight: bold;
 color: rgb(8, 8, 209);
 font-weight: bold;
 }
+
 .Active{
     color: rgb(175, 175, 194);
     font-weight: bold;
@@ -90,158 +226,39 @@ font-weight: bold;
     padding: 12px;
     color: #a09797;
     font-size: 12px;
-    
 }
+
 .attribution {
     font-size: 11px;
     text-align: center;
-
 }
+
 .attribution a {
     color: hsl(228, 45%, 44%);
-
 }
 
-.content{
-    width: 382px;
-    max-height: 350px;
-    background-color: #fafafa;
-    overflow: auto;
-    border-radius: 3px;
+@media only screen and (min-width: 800px) {
+/* for disktop */
+
+.container {
+    width: 300px;
 }
 
-.content ul{
-    margin:0;
-    padding:0;
-    
+.head{
+    width: 380px;
 }
-
-.item{
-    position: relative;
-    width:380px;
-    height: 45px;
-    margin: 0;
-    padding: 0;
-    min-height: 45px;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-    list-style: none;
-
-}
-
-.item i.co{
-    position: absolute;
-    padding-left:5px;
-    font-size: 25px;
-    left:10px;
-    top:10px;
-}
-
-.item i.co:hover{
-    cursor: pointer;
-
-}
-
-.fa-check-circle{
-    color: #85538a;
-}
-.item p.text{
-    position: absolute;
-    max-width: 285px;
-    margin: 0;
-    padding: 9px;
-    font-size: 15px;
-    left: 50px;
-    top: 5px;
-    background-color: #fafafa;
-    color: #393a4c;
-}
-
-.lineThrough{
-    text-decoration: line-through;
-    color : #ccc;
-}
-
-.item i.de{
-    position: absolute;
-    font-size: 21px;
-    right:15px;
-    top:10px;
-}
-
-.item i.de:hover{
-    color:#af0000;
-    cursor: pointer;
-}
-
-/* ------------ add item ------------ */
 .add-to-do{
-    position: relative;
-    width: 363px;
-    margin-bottom: 19px;
-    padding: 9px;
-    border-radius: 3px;
-    text-align: center;
-    background-color: white;
-    
-}
-
-.add-to-do i{
-    position: relative;
-    font-size: 26px;
-    color: #85538a;;
-    
+    width: 340px;
 }
 
 .add-to-do input {
-    position: relative;
-    width: 308px;
-    padding: 5px;
-    border: none;
-    
+    width: 300px;
 }
 
-.add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    padding: 5px;
-    color: #6a708a;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 15px;
-   
+.item{
+    width: 380px;
 }
-
-.add-to-do input::-moz-placeholder { /* Firefox 19+ */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-}
-
-.add-to-do input:-ms-input-placeholder { /* IE 10+ */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-
-}
-
-.add-to-do input:-moz-placeholder { /* Firefox 18- */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-}
-
-@media only screen and (min-width: 375pxm) { 
-/* for mobile */
-.container-main {
-    background-image: url(../images/bg-mobile-light.jpg);
-    background-repeat: no-repeat;
-    font-size: 16px;
-}
-
-}
-
-@media only screen and (max-width: 1440px) {
-/* for disktop */
-.container-main {
-    background-image: url(../images/bg-desktop-light.jpg);
-    background-repeat: no-repeat;
-    font-size: 16px;
+.content{
+    width: 360px;
 }
 }
