--- a/css/light-mode.css
+++ b/css/light-mode.css
@@ -14,7 +14,7 @@ body{
     font-size: 16px;
 }
 
-.image {
+.container-main__image {
     position: fixed;
     width: 100%;
     top: 0px;
@@ -25,7 +25,7 @@ body{
 
 }
 
-.container {
+.container-main__container {
     position: relative;
     display: table;
     width: 223px;
@@ -34,7 +34,7 @@ body{
     text-align: center;
 }
 
-.head{
+.container__head{
     position: relative;
     width: 327px;
 }
@@ -51,14 +51,14 @@ body{
     background-color: unset;
 }
 
-.head-todo{
+.container__head-todo{
     color: #f1f2f2;
     text-align: -webkit-left;
     letter-spacing: 16px;
     font-family: system-ui;
 }
 
-.add-to-do{
+.container__add-to-do{
     position: relative;
     width: 301px;
     margin-bottom: 19px;
@@ -68,39 +68,39 @@ body{
     background-color: white;
 }
 
-.add-to-do i{
+.container__add-to-do i{
     position: relative;
     font-size: 26px;
     color: #85538a;;
 }
 
-.add-to-do input {
+.container__add-to-do input {
     position: relative;
     width: 264px;
     padding: 5px;
     border: none;
 }
 
-.add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+.container__add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     padding: 5px;
     color: #6a708a;
     font-family: 'Titillium Web', sans-serif;
     font-size: 15px;
 }
 
-.add-to-do input::-moz-placeholder { /* Firefox 19+ */
+.container__add-to-do input::-moz-placeholder { /* Firefox 19+ */
     color: #4162f6;
     font-family: 'Titillium Web', sans-serif;
     font-size: 20px;
 }
 
-.add-to-do input:-ms-input-placeholder { /* IE 10+ */
+.container__add-to-do input:-ms-input-placeholder { /* IE 10+ */
     color: #4162f6;
     font-family: 'Titillium Web', sans-serif;
     font-size: 20px;
 }
 
-.add-to-do input:-moz-placeholder { /* Firefox 18- */
+.container__add-to-do input:-moz-placeholder { /* Firefox 18- */
     color: #4162f6;
     font-family: 'Titillium Web', sans-serif;
     font-size: 20px;
@@ -162,7 +162,7 @@ body{
     cursor: pointer;
 }
 
-.content{
+.container__content{
     width: 321px;
     max-height: 375px;
     background-color: #fafafa;
@@ -170,12 +170,12 @@ body{
     border-radius: 3px;
 }
 
-.content ul{
+.container__content ul{
     margin:0;
     padding:0;
 }
 
-.putton-element{
+.list__putton-element{
     position: relative;
     display: flex;
     padding: 11px 0px;
@@ -185,42 +185,42 @@ body{
     font-size: 12px;
 }
 
-.num-items{
+.list__num-items{
 color: rgb(175, 175, 194);
 font-weight: bold;
 } 
 
-.all{
+.list__all{
 color: rgb(8, 8, 209);
 font-weight: bold;
 }
 
-.Active{
+.list__Active{
     color: rgb(175, 175, 194);
     font-weight: bold;
 }
 
-.Active:hover{
+.list__Active:hover{
     color: rgb(26, 24, 24);
     font-weight: bold;
 }
 
-.completed{
+.list__completed{
     color: rgb(175, 175, 194);
     font-weight: bold;
 }
 
-.clear{
+.list__clear{
     color: rgb(175, 175, 194);
     font-weight: bold;
 }
 
-.clear:hover{
+.list__clear:hover{
     color: rgb(90, 86, 86);
     font-weight: bold;
 }
 
-.drag{
+.list__container-main__drag{
     text-align: center;
     margin: 39px;
     padding: 12px;
@@ -228,18 +228,20 @@ font-weight: bold;
     font-size: 12px;
 }
 
-.attribution {
+.container-main__attribution {
     font-size: 11px;
     text-align: center;
 }
 
-.attribution a {
+.container-main__attribution a {
     color: hsl(228, 45%, 44%);
 }
 
 @media only screen and (min-width: 800px) {
 /* for disktop */
-
+.image {
+    background-image: url(../images/bg-desktop-light.jpg);
+}
 .container {
     width: 300px;
 }
