--- a/css/light_mood.scss
+++ b/css/light_mood.scss
@@ -1,4 +1,3 @@
-
 body{
     margin: 0px;
     padding: 0px;
@@ -11,14 +10,16 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background-color: #161722;
+    background-color: #e4e5f1;
+    font-size: 16px;
 }
+
 .container-main__image {
     position: fixed;
     width: 100%;
     top: 0px;
     height: 34%;
-    background-image: url(../images/bg-mobile-dark.jpg);
+    background-image: url(../images/bg-mobile-light.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -37,12 +38,13 @@ body{
     position: relative;
     width: 327px;
 }
+
 #dark-mode-toggle{
     width: 28px;
     height: 36px;
     margin: 7px;
     float: right;
-    background-image: url(../images/icon-sun.svg);
+    background-image: url(../images/icon-moon.svg);
     background-size: 27px;
     background-repeat: no-repeat;
     border: none;
@@ -50,7 +52,7 @@ body{
 }
 
 .container__head-todo{
-    color: #cedbdb;
+    color: #f1f2f2;
     text-align: -webkit-left;
     letter-spacing: 16px;
     font-family: system-ui;
@@ -63,15 +65,13 @@ body{
     padding: 9px;
     border-radius: 3px;
     text-align: center;
-    background-color: #25273c;
-   
+    background-color: white;
 }
 
-.container__add-to-do i {
+.container__add-to-do i{
     position: relative;
     font-size: 26px;
-    color: #85538a;
-    
+    color: #85538a;;
 }
 
 .container__add-to-do input {
@@ -79,16 +79,13 @@ body{
     width: 264px;
     padding: 5px;
     border: none;
-    background-color:  	#25273c;
-    color: #cacde8;
 }
 
 .container__add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     padding: 5px;
-    color: #cacde8;
+    color: #6a708a;
     font-family: 'Titillium Web', sans-serif;
     font-size: 15px;
-    
 }
 
 .container__add-to-do input::-moz-placeholder { /* Firefox 19+ */
@@ -111,15 +108,13 @@ body{
 
 .item{
     position: relative;
-    width:329px;
+    width: 329px;
     height: 45px;
     margin: 0;
     padding: 0;
     min-height: 45px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0,0,0,0.1);
     list-style: none;
-    
-   
 }
 
 .item i.co{
@@ -128,7 +123,6 @@ body{
     font-size: 25px;
     left:10px;
     top:10px;
-    color: #777a92;;
 }
 
 .item i.co:hover{
@@ -136,7 +130,7 @@ body{
 }
 
 .fa-check-circle{
-    color: #b563c0;
+    color: #85538a;
 }
 
 .item p.text{
@@ -144,26 +138,23 @@ body{
     max-width: 285px;
     margin: 0;
     padding: 9px;
-    color: #cacde8;
     font-size: 15px;
     left: 50px;
     top: 5px;
-    background-color:#25273c;
-   
+    background-color: #fafafa;
+    color: #393a4c;
 }
 
 .lineThrough{
     text-decoration: line-through;
-    color : #f1e4ee;
+    color : #ccc;
 }
-
 
 .item i.de{
     position: absolute;
     font-size: 21px;
     right:15px;
     top:10px;
-    color: #777a92;
 }
 
 .item i.de:hover{
@@ -174,7 +165,7 @@ body{
 .container__content{
     width: 321px;
     max-height: 375px;
-    background-color: 	#25273c;
+    background-color: #fafafa;
     overflow: auto;
     border-radius: 3px;
 }
@@ -182,23 +173,21 @@ body{
 .container__content ul{
     margin:0;
     padding:0;
-    
 }
- .list__putton-element{
+
+.list__putton-element{
     position: relative;
     display: flex;
     padding: 11px 0px;
     justify-content: space-around;
     border-top: 1px solid rgba(0,0,0,0.1);
     border-color: lightslategrey;
-    font-size: 14px;
-    
-} 
+    font-size: 12px;
+}
 
 .list__num-items{
 color: rgb(175, 175, 194);
 font-weight: bold;
-
 } 
 
 .list__all{
@@ -231,10 +220,10 @@ font-weight: bold;
     font-weight: bold;
 }
 
-.container-main__drag{
+.list__container-main__drag{
+    text-align: center;
     margin: 39px;
     padding: 12px;
-    text-align: center;
     color: #a09797;
     font-size: 12px;
 }
@@ -245,16 +234,14 @@ font-weight: bold;
 }
 
 .container-main__attribution a {
-    color: hsl(228, 45%, 44%); 
+    color: hsl(228, 45%, 44%);
 }
 
-
-@media only screen and (max-width: 1440px) {
+@media only screen and (min-width: 800px) {
 /* for disktop */
 .container-main__image {
-    background-image: url(../images/bg-desktop-dark.jpg);
+    background-image: url(../images/bg-desktop-light.jpg);
 }
-
 .container-main__container {
     width: 300px;
 }
@@ -262,11 +249,11 @@ font-weight: bold;
 .container__head{
     width: 380px;
 }
-.list__add-to-do{
+.lits__add-to-do{
     width: 354px;
 }
 
-.list__add-to-do input {
+.lits__add-to-do input {
     width: 300px;
 }
 
